# final_year_project

./: .gitignore  README.md  csvconv.py  main.py  pyproject.toml  test.ipynb
Experimental/: fileInfo.py  matrix.py  plots.ipynb
Notebooks/: 1.PCA.ipynb  2.LDA.ipynb  3.SVD.ipynb  4.K-PCA.ipynb  5.t-SNE.ipynb  6.ISOMAP.ipynb  7.ICA.ipynb  8.MDS.ipynb  9.autoEncoder - old.ipynb  9.autoEncoder.ipynb  Methods.ipynb
examples/: autoEncoder.py  dimTest.py  dimTestDataset.py
