[project]
name = "final-year-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livelossplot>=0.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]
